# cpputils

./: .gitignore  CMakeLists.txt  Makefile  README.md  array.hpp  callcommand.hpp  cmdline.hpp  cmdline2.hpp  common.hpp  concepts.hpp  conf.cpp  conf.hpp  io.hpp  lockwrapper.hpp  main.cpp  random.hpp  string.hpp
examples/: conf_example.cpp  io_example.cpp
include/: array.hpp  array2d.hpp  bits.hpp  callcommand.hpp  cmdline.hpp  common.hpp  concepts.hpp  conf.hpp  flags.hpp  inplace_vector.hpp  io-file.hpp  io.hpp  math.hpp  span2d.hpp  string.hpp  uintn.hpp  utility.hpp
src/: array.hpp  bits.hpp  cmdline.hpp  common.hpp  conf.cpp  conf.hpp  flags.hpp  io.cpp  io.hpp  main.cpp  math.hpp  random.hpp  string.hpp  utility.hpp
src/examples/: conf_example.cpp  io_example.cpp
src/test/: array_test.cpp  bits_test.cpp  callcommand_test.cpp  cmdline_test.cpp  conf_test.cpp  flags_test.cpp  inplace_vector.cpp  io_test.cpp  math_test.cpp  string_test.cpp
test/: array_test.cpp  bits_test.cpp  callcommand_test.cpp  cmdline_test.cpp  conf_test.cpp  conf_test.txt  flags_test.cpp  io_test.cpp  math_test.cpp  random_test.cpp  string_test.cpp
